--- a/frontend/src/Components/FormLogin/FormLogin.css
+++ b/frontend/src/Components/FormLogin/FormLogin.css
@@ -2,11 +2,52 @@
 body {
     margin: 0;
     display: flex;
-    flex-direction: column; /* Apila los elementos verticalmente */
+    flex-direction: column;
     min-height: 100vh;
     background-color: #fff;
     font-family: Arial, sans-serif;
 }
+
+/* Estilo para el ícono de check y la animación de la notificación */
+.success-notification-box {
+    border-radius: 15px;
+    max-width: 400px;
+    width: 100%;
+    padding: 20px 40px;
+    text-align: center;
+    animation: scaleUp 0.5s ease-in-out;
+    position: relative;
+  }
+  
+  /* Botón de cierre (X) en la esquina superior derecha */
+  button[aria-label="Cerrar"] {
+    font-size: 2.0rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    position: absolute;
+    top: 0px;
+    right: 10px;
+  }
+  
+  button[aria-label="Cerrar"]:hover {
+    color: red;
+    transition: .3s;
+  }
+  
+  /* Posicionar el ícono de check */
+  .check-icon {
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  }    
+  /*  -------- */
 
 :root{
     --white: #fff;
@@ -39,7 +80,6 @@ body {
     overflow: hidden;
     display: flexbox;
 }
-
 
 .wrapper .form-box{
     position: absolute;
@@ -112,13 +152,11 @@ body {
     transition: 0.3s;
 }
 
-
 .input-box input:focus~label,
 .input-box input:valid~label{
     top: -5px;
     color: var(--lightBulue);
 }
-
 
 .input-box i{
     position: absolute;
@@ -173,7 +211,6 @@ form .linkTxt{
     transition-delay: calc(.05s * var(--j));
 }
 
-
 .wrapper.active .form-box.login .animation{
     transform: translateX(-120%);
     opacity: 0;
@@ -195,7 +232,6 @@ form .linkTxt{
     right: 0;
     text-align: right;
     padding: 0 40px 60px 150px;
-
 }
 
 .wrapper .info-text h2{
@@ -209,7 +245,6 @@ form .linkTxt{
     font-size: 16px;
     color: var(--white);
 }
-
 
 .wrapper .info-text.login .animation{
     transform: translateX(0);
@@ -279,7 +314,6 @@ form .linkTxt{
     pointer-events: auto;
 }
 
-
 .wrapper .info-text.register .animation{
     transform: translateX(-120%);
     opacity: 0;
@@ -323,8 +357,6 @@ form .linkTxt{
 h1{
     color: #fff;
 }
-
-
 /* Media Query para tablets */
 @media (min-width: 601px) and (max-width: 900px) {
     .wrapper {
@@ -351,9 +383,7 @@ h1{
     }
 }
 
-
 @media (max-width: 600px) {
-
     .wrapper {
         width: 90%; 
         padding: 20px;
@@ -368,33 +398,26 @@ h1{
     .wrapper .form-box.login{
         text-align: center;
         padding-right: 0px;
-
-
         background-color: white;
     }
-
     
     .wrapper .form-box.login .title {
         color: #0404e2 !important; 
     }
-
     
     .wrapper .form-box.login .input-box input {
         color: #0404e2 !important;
         border-bottom: 2px solid #0e1f53 !important; 
     }
-
    
     .wrapper .form-box.login .input-box input::placeholder {
         color: #0404e2 !important;
     }
 
-
     .wrapper .form-box.login .input-box label {
         color: #0404e2 !important;
     }
 
- 
     .wrapper .form-box.login .linkTxt p {
         color: #0404e2 !important; 
     }
@@ -403,7 +426,6 @@ h1{
         color: #0404e2 !important; 
     }
 
- 
     .wrapper .form-box.login button {
         background-color: #0404e2; 
         border-radius: 25px;
@@ -427,11 +449,7 @@ h1{
     }
 }
 
-
 @media (max-width: 599px){
-
-
-
     .form-box.login{
         padding: 10px !important;
         padding-right: 20px !important;
@@ -448,21 +466,13 @@ h1{
     }
 
     .form-box.register{
-
         padding-left: 30px !important;
-
         width: 100%;
-
-
-
     }
 
     #registrate{
         color: #0404e2 !important;
         margin-left:50px !important;
-
-    
- 
     }
 
     .info-text.register{
@@ -486,12 +496,4 @@ h1{
     .wrapper.active .form-box.login{
         pointer-events: none;
     }
-
-
-
-
-
-
-
-
 }
