--- a/frontend/src/Components/RestaurantsList/RestaurantsList.css
+++ b/frontend/src/Components/RestaurantsList/RestaurantsList.css
@@ -1,5 +1,3 @@
-/* Restaurantes.css */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
   margin: 0;
@@ -16,21 +14,22 @@ h2 {
   margin-top: 30px;
   font-size: 24px;
   color: #333;
+  text-align: center;
 }
 
-.restaurant-container {
-  padding: 20px;
-}
-
-.restaurant-list {
+/* Contenedor de filtros */
+.filter-container {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  width: 80%;
-  justify-content: center;
-  margin: 0 auto;
+  align-items: stretch;
+  gap: 1rem;
 }
 
+.clear-button {
+  width: 100%;
+}
+
+/* Lista de restaurantes */
 .restaurant-item {
   display: flex;
   align-items: center;
@@ -47,27 +46,52 @@ h2 {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.restaurant-logo {
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
-  margin-right: 15px;
-}
+/* Estilos responsivos */
+@media (max-width: 768px) {
+  .filter-container > div {
+    display: flex;
+    align-items: center;
+  }
 
-.restaurant-info h3 {
-  margin: 0;
-  font-size: 18px;
-  color: #222;
-}
+  .filter-container > div select {
+    width: 20%; /* Select ocupa el 20% */
+    margin-right: 5px; /* Espacio a la derecha del select */
+  }
 
-.restaurant-info p {
-  margin: 5px 0;
-  color: #666;
-  font-size: 14px;
-}
+  .filter-container > div input {
+    flex-grow: 1; /* Input ocupa el resto del espacio */
+    margin-left: 5px; /* Espacio a la izquierda del input */
+  }
 
-.restaurant-rating {
-  font-size: 18px;
-  color: #f39c12;
-  font-weight: bold;
+  .clear-button {
+    margin-top: 0.5rem; /* Botón debajo */
+  }
+
+  .restaurant-item {
+    flex-direction: row; /* Asegura que los elementos estén en una fila */
+    justify-content: space-between;
+    padding: 10px;
+  }
+
+  .restaurant-item .restaurant-info p {
+    display: none !important; /* Oculta la descripción y otros párrafos */
+  }
+
+  .restaurant-info {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 10px;
+  }
+
+  .restaurant-rating {
+    flex-shrink: 0; /* Mantiene el rating visible y alineado */
+    font-size: 1rem;
+  }
+
+  .restaurant-logo {
+    width: 50px; /* Ajusta el tamaño de la imagen */
+    height: 50px;
+  }
 }
